[package]
name = "nikut"
version = "0.1.0"
authors = ["othelarian <le.maitre.killian@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
#glutin = {version = "0.21.2", default-features = false}
glutin = {version = "0.22.0", default-features = false}

luminance = "0.38.0"
luminance-derive = "0.5.1"
luminance-windowing = "0.8.1"
#luminance-glutin = "0.7.0"
takeable-option = "0.5.0"

rand = "0.5.5"
